2008-05-21  Daniel P. Stasinski <daniel@avenues.org>

	* nsd/compress.c:    gzip compression fixes

2008-05-17  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* nsd-config.tcl:    Removed sndbuf/rcvbuf
	* include/ns.h:      parameters for setsockopt
	* nsd/nsd.h:         as this is increasingly
	* nsd/driver.c:      getting auto-tuned by
	* tests/test.nscfg:  modern OS'es

2008-05-12  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/adpcmds.c:
	* nsd/adprequest.c: Expose Ns_AdpAppend, Ns_AdpFlush, and add new
	Ns_AdpGetOutput for the benefit of adp commands written in
	external modules.

2008-05-12  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* nsd/driver.c: Initializes memory priour usage to avoid
	UMR-kind of warnings in Purify.

	* tests/ns_thread.test: Fixed regexps testing returned handles
	to match recent changes in handle format (using hyphens
	instead of blanks)

2008-05-11  Vlad Seryakov <seryakov@users.sf.net>

	nsd/adprequest.c: Server will return 404 status if ADP file is not 
	found or cannot be accessed. No error log reporting about this anymore.

2008-05-10  Vlad Seryakov <seryakov@users.sf.net>

	nsperm/nsperm.c: Fixed bug with netmask parsing, submitted by 
	Daniel Stasinski, now using inet_aton instead of inet_addr

2008-05-09  Vlad Seryakov <seryakov@users.sf.net>

	* nsd/adprequest.c: Fixed situation when adp registered absolute path
	outside of the page root.

	Output error message when registered adp callback could not resolve 
	actual adp file.

2008-05-05  Vlad Seryakov <seryakov@users.sf.net>

	* nsd/driver.c:
	* nsd/queue.c: Minor change to allow queueing socktes with empty
	Request structure. This is the case for drivers without DRIVER_ASYNC flag.
	Moved assigning IP/port into queue.c:ConnRun where Request should be properly 
	initialized already.

2008-05-01  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* nsd/tcljob.c: Fixed deadlock in job thread caused
	by obscure locking strategy of the existing code.